SOC-2796 | fix: revert changes for line height for post text on mobile

--- a/front/main/app/styles/module/_discussion.scss
+++ b/front/main/app/styles/module/_discussion.scss
@@ -790,7 +790,7 @@ body.discussions {
 
 		.discussion-content {
 			.post-details-link {
-				line-height: $post-title-line-height;
+				line-height: inherit;
 			}
 		}
 
